--- a/translations/en-US.json
+++ b/translations/en-US.json
@@ -59,6 +59,86 @@
     "files.title.label": "Title",
     "files.type": "Type",
     "files.upload": "Upload File",
+    "files.directory.structure": "Directory Structure",
+    "files.project": "Project:",
+    "files.loading": "Loading...",
+    "files.select.directory": "Select Directory",
+    "files.new.article": "New Article",
+    "files.refresh": "Refresh",
+    "files.current.path": "Please select a directory on the left",
+    "files.modal.new.article": "New Article",
+    "files.filename.generated": "Filename will be generated automatically, e.g.: 2022-01-19-introduction-to-c.md",
+    "files.modal.author": "Author",
+    "files.modal.author.placeholder": "Author Name",
+    "files.modal.categories": "Categories (Optional)",
+    "files.modal.categories.placeholder": "Separated by commas, e.g.: Technology,Programming",
+    "files.modal.tags": "Tags (Optional)",
+    "files.modal.tags.placeholder": "Separated by commas, e.g.: C Language,Tutorial,Beginner",
+    "files.modal.cancel": "Cancel",
+    "files.modal.create": "Create Article",
+    "files.load.tree.failed": "Failed to load directory tree",
+    "files.load.files.failed": "Failed to load file list",
+    "files.empty.directory": "This directory is empty",
+    "files.title.required": "Please enter article title",
+    "files.create.failed": "Create failed",
+    "files.create.success": "Article created successfully! Filename:",
+    "articles.title": "Article List",
+    "articles.subtitle": "Browse all blog articles with pagination and time filtering",
+    "articles.total.count": "Articles",
+    "articles.filter": "Filter Articles",
+    "articles.filter.year": "Filter by Year",
+    "articles.filter.month": "Filter by Month",
+    "articles.filter.all.years": "All Years",
+    "articles.filter.all.months": "All Months",
+    "articles.month.1": "January",
+    "articles.month.2": "February",
+    "articles.month.3": "March",
+    "articles.month.4": "April",
+    "articles.month.5": "May",
+    "articles.month.6": "June",
+    "articles.month.7": "July",
+    "articles.month.8": "August",
+    "articles.month.9": "September",
+    "articles.month.10": "October",
+    "articles.month.11": "November",
+    "articles.month.12": "December",
+    "articles.actions": "Actions",
+    "articles.filter.apply": "Apply Filter",
+    "articles.filter.clear": "Clear Filter",
+    "articles.list": "Article List",
+    "articles.showing": "Showing",
+    "articles.items": "items",
+    "articles.root.directory": "Root Directory",
+    "articles.edit": "Edit",
+    "articles.no.articles": "No Articles",
+    "articles.no.articles.hint": "No articles found with current filter criteria",
+    "articles.back.home": "Back to Home",
+    "articles.current.project": "Current Hugo Project:",
+    "articles.delete.confirm": "Are you sure you want to delete this article? It will be moved to trash.",
+    "articles.delete.failed": "Delete failed",
+    "articles.delete.success": "Article moved to trash",
+    "articles.delete.error": "Delete failed",
+    "articles.pagination.first": "First",
+    "articles.pagination.prev": "Previous",
+    "articles.pagination.next": "Next",
+    "articles.pagination.last": "Last",
+    "home.view.all.articles": "View All Articles",
+    "articles.tab.published": "Published",
+    "articles.tab.drafts": "Drafts", 
+    "articles.tab.issues": "Issues",
+    "articles.draft.badge": "Draft",
+    "articles.search.filter": "Search and Filter",
+    "articles.search": "Search Articles",
+    "articles.search.placeholder": "Enter keywords to search titles or content...",
+    "articles.search.actions": "Search Actions",
+    "articles.search.button": "Search",
+    "articles.search.clear": "Clear",
+    "articles.filter.actions": "Filter Actions",
+    "articles.filter.clear.all": "Clear All",
+    "articles.search.results": "Search Results:",
+    "articles.search.found": "Found",
+    "articles.search.articles": "articles",
+    "articles.issues.detected": "Issues Detected:",
     "home.articles.count": "Articles",
     "home.articles.total": "Total {count} articles",
     "home.card.deploy": "Deploy Management",
@@ -210,5 +290,47 @@
     "hugo.install.available.version": "Available Version",
     "hugo.install.installing": "Installing Hugo...",
     "hugo.install.success": "Hugo installed successfully!",
-    "hugo.install.failed": "Hugo installation failed"
+    "hugo.install.failed": "Hugo installation failed",
+    "deploy.multi.title": "Multi-Server Deployment Management",
+    "deploy.multi.subtitle": "Manage multiple deployment targets with independent configurations and deployment controls",
+    "deploy.server.name": "Server Name",
+    "deploy.server.domain": "Domain",
+    "deploy.server.host": "Server Host",
+    "deploy.server.status": "Status",
+    "deploy.server.progress": "Progress",
+    "deploy.server.actions": "Actions",
+    "deploy.server.add": "Add Server",
+    "deploy.server.config": "Configure",
+    "deploy.server.deploy": "Deploy",
+    "deploy.server.build.deploy": "Build+Deploy",
+    "deploy.server.pause": "Pause",
+    "deploy.server.resume": "Resume",
+    "deploy.server.stop": "Stop",
+    "deploy.server.delete": "Delete",
+    "deploy.server.test": "Test Connection",
+    "deploy.status.idle": "Idle",
+    "deploy.status.building": "Building",
+    "deploy.status.deploying": "Deploying",
+    "deploy.status.success": "Success",
+    "deploy.status.failed": "Failed",
+    "deploy.status.paused": "Paused",
+    "deploy.modal.server.config": "Server Configuration",
+    "deploy.modal.server.name.placeholder": "e.g.: Production Server",
+    "deploy.modal.domain.placeholder": "e.g.: example.com",
+    "deploy.modal.enabled": "Enable this server",
+    "deploy.modal.save": "Save Configuration",
+    "deploy.modal.cancel": "Cancel",
+    "deploy.confirm.delete": "Are you sure you want to delete this server configuration?",
+    "deploy.no.servers": "No Server Configurations",
+    "deploy.no.servers.hint": "Click \"Add Server\" button to create your first deployment target",
+    "build.hugo.title": "Hugo Build",
+    "build.build.site": "Build Site",
+    "build.clean.build": "Clean & Build",
+    "build.description": "Generate static HTML files for deployment",
+    "serve.status.running": "Running",
+    "serve.status.stopped": "Stopped",
+    "serve.open": "Open Preview",
+    "serve.start": "Start Service",
+    "serve.restart": "Restart Service",
+    "serve.stop": "Stop Service"
 }
