--- a/translations/ja-JP.json
+++ b/translations/ja-JP.json
@@ -59,6 +59,29 @@
     "files.title.label": "タイトル",
     "files.type": "タイプ",
     "files.upload": "ファイルアップロード",
+    "files.directory.structure": "ディレクトリ構造",
+    "files.project": "プロジェクト：",
+    "files.loading": "読み込み中...",
+    "files.select.directory": "ディレクトリを選択",
+    "files.new.article": "新しい記事",
+    "files.refresh": "更新",
+    "files.current.path": "左側でディレクトリを選択してください",
+    "files.modal.new.article": "新しい記事",
+    "files.filename.generated": "ファイル名は自動生成されます。例：2022-01-19-c言語入門.md",
+    "files.modal.author": "著者",
+    "files.modal.author.placeholder": "著者名",
+    "files.modal.categories": "カテゴリー（オプション）",
+    "files.modal.categories.placeholder": "カンマ区切り、例：技術,プログラミング",
+    "files.modal.tags": "タグ（オプション）",
+    "files.modal.tags.placeholder": "カンマ区切り、例：C言語,チュートリアル,初心者",
+    "files.modal.cancel": "キャンセル",
+    "files.modal.create": "記事を作成",
+    "files.load.tree.failed": "ディレクトリツリーの読み込みに失敗",
+    "files.load.files.failed": "ファイルリストの読み込みに失敗",
+    "files.empty.directory": "このディレクトリは空です",
+    "files.title.required": "記事タイトルを入力してください",
+    "files.create.failed": "作成に失敗",
+    "files.create.success": "記事が正常に作成されました！ファイル名：",
     "home.articles.count": "篇の記事",
     "home.articles.total": "合計 {count} 篇の記事",
     "home.card.deploy": "デプロイ管理",
