--- a/translations/ko-KR.json
+++ b/translations/ko-KR.json
@@ -59,6 +59,29 @@
     "files.title.label": "제목",
     "files.type": "유형",
     "files.upload": "파일 업로드",
+    "files.directory.structure": "디렉토리 구조",
+    "files.project": "프로젝트:",
+    "files.loading": "로딩 중...",
+    "files.select.directory": "디렉토리 선택",
+    "files.new.article": "새 글",
+    "files.refresh": "새로 고침",
+    "files.current.path": "왼쪽에서 디렉토리를 선택하세요",
+    "files.modal.new.article": "새 글",
+    "files.filename.generated": "파일명이 자동으로 생성됩니다. 예: 2022-01-19-c언어-소개.md",
+    "files.modal.author": "작성자",
+    "files.modal.author.placeholder": "작성자 이름",
+    "files.modal.categories": "카테고리 (선택사항)",
+    "files.modal.categories.placeholder": "쉼표로 구분, 예: 기술,프로그래밍",
+    "files.modal.tags": "태그 (선택사항)",
+    "files.modal.tags.placeholder": "쉼표로 구분, 예: C언어,튜토리얼,초보자",
+    "files.modal.cancel": "취소",
+    "files.modal.create": "글 작성",
+    "files.load.tree.failed": "디렉토리 트리 로드 실패",
+    "files.load.files.failed": "파일 목록 로드 실패",
+    "files.empty.directory": "이 디렉토리가 비어있습니다",
+    "files.title.required": "글 제목을 입력하세요",
+    "files.create.failed": "작성 실패",
+    "files.create.success": "글이 성공적으로 작성되었습니다! 파일명:",
     "home.articles.count": "편의 글",
     "home.articles.total": "총 {count} 편의 글",
     "home.card.deploy": "배포 관리",
