--- a/translations/ru-RU.json
+++ b/translations/ru-RU.json
@@ -59,6 +59,29 @@
     "files.title.label": "Заголовок",
     "files.type": "Тип",
     "files.upload": "Загрузить файл",
+    "files.directory.structure": "Структура каталогов",
+    "files.project": "Проект:",
+    "files.loading": "Загрузка...",
+    "files.select.directory": "Выберите каталог",
+    "files.new.article": "Новая статья",
+    "files.refresh": "Обновить",
+    "files.current.path": "Пожалуйста, выберите каталог слева",
+    "files.modal.new.article": "Новая статья",
+    "files.filename.generated": "Имя файла будет сгенерировано автоматически, например: 2022-01-19-введение-в-c.md",
+    "files.modal.author": "Автор",
+    "files.modal.author.placeholder": "Имя автора",
+    "files.modal.categories": "Категории (необязательно)",
+    "files.modal.categories.placeholder": "Разделенные запятыми, например: Технологии,Программирование",
+    "files.modal.tags": "Теги (необязательно)",
+    "files.modal.tags.placeholder": "Разделенные запятыми, например: C язык,Руководство,Начинающий",
+    "files.modal.cancel": "Отмена",
+    "files.modal.create": "Создать статью",
+    "files.load.tree.failed": "Не удалось загрузить дерево каталогов",
+    "files.load.files.failed": "Не удалось загрузить список файлов",
+    "files.empty.directory": "Этот каталог пуст",
+    "files.title.required": "Пожалуйста, введите заголовок статьи",
+    "files.create.failed": "Ошибка создания",
+    "files.create.success": "Статья успешно создана! Имя файла:",
     "home.articles.count": "статей",
     "home.articles.total": "Всего {count} статей",
     "home.card.deploy": "Управление развертыванием",
