--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -59,6 +59,86 @@
     "files.title.label": "标题",
     "files.type": "类型",
     "files.upload": "上传文件",
+    "files.directory.structure": "目录结构",
+    "files.project": "项目：",
+    "files.loading": "加载中...",
+    "files.select.directory": "请选择目录",
+    "files.new.article": "新建文章",
+    "files.refresh": "刷新",
+    "files.current.path": "请在左侧选择一个目录",
+    "files.modal.new.article": "新建文章",
+    "files.filename.generated": "将自动生成文件名，如：2022-01-19-c语言简单介绍.md",
+    "files.modal.author": "作者",
+    "files.modal.author.placeholder": "作者姓名",
+    "files.modal.categories": "分类 (可选)",
+    "files.modal.categories.placeholder": "用逗号分隔，如：技术,编程",
+    "files.modal.tags": "标签 (可选)",
+    "files.modal.tags.placeholder": "用逗号分隔，如：C语言,教程,入门",
+    "files.modal.cancel": "取消",
+    "files.modal.create": "创建文章",
+    "files.load.tree.failed": "加载目录树失败",
+    "files.load.files.failed": "加载文件列表失败",
+    "files.empty.directory": "此目录为空",
+    "files.title.required": "请输入文章标题",
+    "files.create.failed": "创建失败",
+    "files.create.success": "文章创建成功！文件名：",
+    "articles.title": "文章列表",
+    "articles.subtitle": "浏览所有博客文章，支持分页和时间筛选",
+    "articles.total.count": "篇文章",
+    "articles.filter": "筛选文章",
+    "articles.filter.year": "按年份筛选",
+    "articles.filter.month": "按月份筛选",
+    "articles.filter.all.years": "所有年份",
+    "articles.filter.all.months": "所有月份",
+    "articles.month.1": "1月",
+    "articles.month.2": "2月",
+    "articles.month.3": "3月",
+    "articles.month.4": "4月",
+    "articles.month.5": "5月",
+    "articles.month.6": "6月",
+    "articles.month.7": "7月",
+    "articles.month.8": "8月",
+    "articles.month.9": "9月",
+    "articles.month.10": "10月",
+    "articles.month.11": "11月",
+    "articles.month.12": "12月",
+    "articles.actions": "操作",
+    "articles.filter.apply": "应用筛选",
+    "articles.filter.clear": "清除筛选",
+    "articles.list": "文章列表",
+    "articles.showing": "显示",
+    "articles.items": "项",
+    "articles.root.directory": "根目录",
+    "articles.edit": "编辑",
+    "articles.no.articles": "暂无文章",
+    "articles.no.articles.hint": "当前筛选条件下没有找到文章",
+    "articles.back.home": "返回首页",
+    "articles.current.project": "当前Hugo项目：",
+    "articles.delete.confirm": "确定要删除这篇文章吗？文章将移至回收站。",
+    "articles.delete.failed": "删除失败",
+    "articles.delete.success": "文章已移至回收站",
+    "articles.delete.error": "删除失败",
+    "articles.pagination.first": "首页",
+    "articles.pagination.prev": "上一页",
+    "articles.pagination.next": "下一页",
+    "articles.pagination.last": "末页",
+    "home.view.all.articles": "查看全部文章",
+    "articles.tab.published": "已发布",
+    "articles.tab.drafts": "草稿箱", 
+    "articles.tab.issues": "问题检测",
+    "articles.draft.badge": "草稿",
+    "articles.search.filter": "搜索和筛选",
+    "articles.search": "搜索文章",
+    "articles.search.placeholder": "输入关键词搜索标题或内容...",
+    "articles.search.actions": "搜索操作",
+    "articles.search.button": "搜索",
+    "articles.search.clear": "清除",
+    "articles.filter.actions": "筛选操作",
+    "articles.filter.clear.all": "清除全部",
+    "articles.search.results": "搜索结果：",
+    "articles.search.found": "找到",
+    "articles.search.articles": "篇文章",
+    "articles.issues.detected": "发现问题：",
     "home.articles.count": "篇文章",
     "home.articles.total": "共 {count} 篇文章",
     "home.card.deploy": "部署管理",
@@ -210,5 +290,47 @@
     "hugo.install.available.version": "可用版本",
     "hugo.install.installing": "正在安装Hugo...",
     "hugo.install.success": "Hugo安装成功！",
-    "hugo.install.failed": "Hugo安装失败"
+    "hugo.install.failed": "Hugo安装失败",
+    "deploy.multi.title": "多服务器部署管理",
+    "deploy.multi.subtitle": "管理多个部署目标，支持独立配置和部署控制",
+    "deploy.server.name": "服务器名称",
+    "deploy.server.domain": "域名",
+    "deploy.server.host": "服务器地址",
+    "deploy.server.status": "状态",
+    "deploy.server.progress": "进度",
+    "deploy.server.actions": "操作",
+    "deploy.server.add": "添加服务器",
+    "deploy.server.config": "配置",
+    "deploy.server.deploy": "部署",
+    "deploy.server.build.deploy": "构建+部署",
+    "deploy.server.pause": "暂停",
+    "deploy.server.resume": "继续",
+    "deploy.server.stop": "停止",
+    "deploy.server.delete": "删除",
+    "deploy.server.test": "测试连接",
+    "deploy.status.idle": "空闲",
+    "deploy.status.building": "构建中",
+    "deploy.status.deploying": "部署中",
+    "deploy.status.success": "成功",
+    "deploy.status.failed": "失败",
+    "deploy.status.paused": "已暂停",
+    "deploy.modal.server.config": "服务器配置",
+    "deploy.modal.server.name.placeholder": "例如：生产服务器",
+    "deploy.modal.domain.placeholder": "例如：example.com",
+    "deploy.modal.enabled": "启用此服务器",
+    "deploy.modal.save": "保存配置",
+    "deploy.modal.cancel": "取消",
+    "deploy.confirm.delete": "确定要删除这个服务器配置吗？",
+    "deploy.no.servers": "暂无服务器配置",
+    "deploy.no.servers.hint": "点击\"添加服务器\"按钮创建第一个部署目标",
+    "build.hugo.title": "Hugo构建",
+    "build.build.site": "构建站点",
+    "build.clean.build": "清理并构建",
+    "build.description": "生成静态HTML文件，为部署做准备",
+    "serve.status.running": "运行中",
+    "serve.status.stopped": "已停止",
+    "serve.open": "打开预览",
+    "serve.start": "启动服务",
+    "serve.restart": "重启服务",
+    "serve.stop": "停止服务"
 }
