--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -59,6 +59,29 @@
     "files.title.label": "標題",
     "files.type": "類型",
     "files.upload": "上傳檔案",
+    "files.directory.structure": "目錄結構",
+    "files.project": "項目：",
+    "files.loading": "載入中...",
+    "files.select.directory": "請選擇目錄",
+    "files.new.article": "新建文章",
+    "files.refresh": "重新整理",
+    "files.current.path": "請在左側選擇一個目錄",
+    "files.modal.new.article": "新建文章",
+    "files.filename.generated": "將自動生成檔案名，如：2022-01-19-c語言簡單介紹.md",
+    "files.modal.author": "作者",
+    "files.modal.author.placeholder": "作者姓名",
+    "files.modal.categories": "分類 (可選)",
+    "files.modal.categories.placeholder": "用逗號分隔，如：技術,程式設計",
+    "files.modal.tags": "標籤 (可選)",
+    "files.modal.tags.placeholder": "用逗號分隔，如：C語言,教學,入門",
+    "files.modal.cancel": "取消",
+    "files.modal.create": "建立文章",
+    "files.load.tree.failed": "載入目錄樹失敗",
+    "files.load.files.failed": "載入檔案列表失敗",
+    "files.empty.directory": "此目錄為空",
+    "files.title.required": "請輸入文章標題",
+    "files.create.failed": "建立失敗",
+    "files.create.success": "文章建立成功！檔案名：",
     "home.articles.count": "篇文章",
     "home.articles.total": "共 {count} 篇文章",
     "home.card.deploy": "部署管理",
