--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -333,5 +333,36 @@
     "serve.open": "打开预览",
     "serve.start": "启动服务",
     "serve.restart": "重启服务",
-    "serve.stop": "停止服务"
+    "serve.stop": "停止服务",
+    "settings.hugo.path.not.set": "Hugo项目路径未设置",
+    "articles.path.not.exist": "文章目录不存在",
+    "datetime.repair.title": "时间修复",
+    "datetime.repair.check": "检查时间格式",
+    "datetime.repair.batch": "批量修复时间",
+    "datetime.repair.checking": "正在检查时间格式...",
+    "datetime.repair.total.files": "总文件数",
+    "datetime.repair.valid.count": "格式正确",
+    "datetime.repair.invalid.count": "需要修复",
+    "datetime.repair.success.rate": "正确率",
+    "datetime.repair.invalid.files": "需要修复的文件",
+    "datetime.repair.problem.type": "问题类型",
+    "datetime.repair.current.format": "当前格式",
+    "datetime.repair.suggested.format": "建议格式",
+    "datetime.repair.action": "操作",
+    "datetime.repair.missing.date": "缺少日期",
+    "datetime.repair.invalid.format": "格式错误",
+    "datetime.repair.read.error": "读取失败",
+    "datetime.repair.cannot.fix": "无法修复",
+    "datetime.repair.single.fix": "修复",
+    "datetime.repair.all.success": "太棒了！",
+    "datetime.repair.all.valid": "所有文章的时间格式都符合Hugo要求",
+    "datetime.repair.confirm": "确定要批量修复所有博客的时间格式吗？\\n这将修改文件内容，建议先备份。",
+    "datetime.repair.repairing": "修复中...",
+    "datetime.repair.completed": "批量修复完成！",
+    "datetime.repair.success.single": "修复成功！",
+    "articles.publish.date": "发布日期",
+    "articles.publish.date.help": "设置文章的发布时间",
+    "datetime.format.warning": "当前时间格式不符合Hugo要求(需RFC3339格式)",
+    "datetime.current.format": "当前格式",
+    "datetime.suggested.format": "建议格式"
 }
