--- a/translations/en-US.json
+++ b/translations/en-US.json
@@ -333,5 +333,36 @@
     "serve.open": "Open Preview",
     "serve.start": "Start Service",
     "serve.restart": "Restart Service",
-    "serve.stop": "Stop Service"
+    "serve.stop": "Stop Service",
+    "articles.editor.title": "Edit Article",
+    "articles.editor.content": "Content Editor",
+    "articles.editor.metadata": "Metadata",
+    "articles.editor.settings": "Advanced Settings",
+    "articles.editor.markdown.content": "Markdown Content",
+    "articles.editor.insert.image": "Insert Image",
+    "articles.editor.title.label": "Article Title",
+    "articles.editor.author": "Author",
+    "articles.editor.type": "Article Type",
+    "articles.editor.categories": "Categories",
+    "articles.editor.tags": "Tags",
+    "articles.editor.url": "URL/Permalink",
+    "articles.new.article": "New Article",
+    "articles.back.to.list": "Back to List",
+    "articles.preview": "Preview",
+    "articles.preview.title": "Article Preview",
+    "articles.preview.loading": "Loading article content...",
+    "nav.tools": "Tools",
+    "nav.books": "Books",
+    "nav.wiki": "Wiki",
+    "wiki.category.ai": "AI Programming Guide",
+    "wiki.category.claude": "Claude Code Usage",
+    "wiki.category.mcp": "MCP Protocol",
+    "wiki.category.terms": "AI Terminology",
+    "wiki.category.examples": "Practice Examples",
+    "tools.title": "Toolbox",
+    "tools.subtitle": "Collect and manage your commonly used tools and online utilities",
+    "books.title": "Book Collection",
+    "books.subtitle": "Collect and manage your technical books, documentation and learning resources",
+    "wiki.title": "Knowledge Base",
+    "wiki.subtitle": "Collect and manage MCP guides, AI terminology and technical documentation"
 }
