--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -364,5 +364,36 @@
     "articles.publish.date.help": "设置文章的发布时间",
     "datetime.format.warning": "当前时间格式不符合Hugo要求(需RFC3339格式)",
     "datetime.current.format": "当前格式",
-    "datetime.suggested.format": "建议格式"
+    "datetime.suggested.format": "建议格式",
+    "articles.editor.title": "编辑文章",
+    "articles.editor.content": "内容编辑",
+    "articles.editor.metadata": "元数据",
+    "articles.editor.settings": "高级设置",
+    "articles.editor.markdown.content": "Markdown 内容",
+    "articles.editor.insert.image": "插入图片",
+    "articles.editor.title.label": "文章标题",
+    "articles.editor.author": "作者",
+    "articles.editor.type": "文章类型",
+    "articles.editor.categories": "分类",
+    "articles.editor.tags": "标签",
+    "articles.editor.url": "URL/永久链接",
+    "articles.new.article": "新建文章",
+    "articles.back.to.list": "返回列表",
+    "articles.preview": "预览",
+    "articles.preview.title": "文章预览",
+    "articles.preview.loading": "正在加载文章内容...",
+    "nav.tools": "工具箱",
+    "nav.books": "书籍收藏",
+    "nav.wiki": "知识库",
+    "wiki.category.ai": "AI编程指南",
+    "wiki.category.claude": "Claude Code使用",
+    "wiki.category.mcp": "MCP协议",
+    "wiki.category.terms": "AI术语词典",
+    "wiki.category.examples": "实践案例",
+    "tools.title": "工具箱",
+    "tools.subtitle": "收藏和管理您常用的工具软件和在线工具",
+    "books.title": "书籍收藏",
+    "books.subtitle": "收藏和管理您的技术书籍、文档和学习资源",
+    "wiki.title": "知识库",
+    "wiki.subtitle": "收藏和管理MCP使用指南、AI术语和技术文档"
 }
