--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -1,6 +1,29 @@
 {
     "common.all": "全部",
     "common.cancel": "取消",
+    "categories.title": "分类管理",
+    "categories.subtitle": "管理工具、书籍、Wiki等模块的分类配置",
+    "categories.create": "创建分类",
+    "categories.add": "添加分类",
+    "categories.modules.tools": "工具管理分类",
+    "categories.modules.books": "书籍管理分类", 
+    "categories.modules.wiki": "Wiki管理分类",
+    "categories.form.name": "分类名称",
+    "categories.form.name.placeholder": "输入分类名称",
+    "categories.form.icon": "图标",
+    "categories.form.icon.placeholder": "Bootstrap图标名称",
+    "categories.form.icon.help": "如：folder、tags、gear",
+    "categories.form.color": "颜色",
+    "categories.form.description": "描述",
+    "categories.form.description.placeholder": "分类的描述信息（可选）",
+    "categories.form.enabled": "启用分类",
+    "categories.form.sort_order": "排序",
+    "settings.category.management": "分类管理",
+    "settings.category.description": "管理工具箱、书籍收藏、Wiki知识库等模块的分类配置",
+    "settings.manage.categories": "管理分类",
+    "tools.manage.categories": "管理分类",
+    "books.manage.categories": "管理分类",
+    "wiki.manage.categories": "管理分类",
     "common.close": "关闭",
     "common.confirm": "确认",
     "common.create": "创建",
